--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     dfadfadkfadkfa;dfk
     adfkal;dfk;lakdf;lakd;sf
+    afjdakfjlkadjfkladjf
+    fffffffffffffffffffffffffffffffffffffffffff
     <script src="/test.js"></script>
 </body>
 </html>
