또 수정했니

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     해낼수있니?
     해낼수있니?
     해낼수있니?
+    다른수정
+    다른수정
+    다른수정
+    다른수정
+    다른수정
+    다른수정
     <script src="/test.js"></script>
 </body>
 </html>
